# configme

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: DESIGN.md
docs/migrations/: README.md
docs/migrations/coordinates/: README.md  common.mk
docs/migrations/yelmo/: common.mk
src/configme/: __init__.py  __main__.py  cli.py  color.py  context.py  cpu.py  data.py  extras.py  generate.py  git.py  install.py  links.py  netcdf.py  status.py
src/configme/data/: compiler_defaults.toml  fesm-utils-machine.template.toml  hostnames.toml  uarch.toml
src/configme/data/compilers/: gfortran.mk  ifort.mk  ifx.mk
src/configme/data/machines/: anta.mk  awi_albedo.mk  brigit.mk  chinook.mk  dkrz_levante.mk  foehn.mk  linux.mk  macbook.mk  pik_hpc2024.mk  yelmox-bipolar-glacier.mk
src/configme/data/orchestrators/: FastEarth3D.toml  climber-x.toml  yelmox.toml
tests/: test_color.py  test_context_hostname.py  test_cpu.py  test_data.py  test_data_packages.py  test_extras_git_repo.py  test_extras_pip_package.py  test_extras_runme_config.py  test_generate.py  test_install.py  test_links.py  test_repo_selectors.py  test_status.py
