[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configme"
# Single-sourced from configme.__version__ (see [tool.setuptools.dynamic]).
dynamic = ["version"]
description = "Configure the build of the yelmox / climber-x model stacks from one source of machine- and compiler-specific truth."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Alexander Robinson" },
]
# Stdlib-only at runtime. tomllib is stdlib on 3.11+; on older Pythons we fall
# back to the `tomli` backport (declared as a conditional dependency).
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.scripts]
configme = "configme.cli:main"

[tool.setuptools.dynamic]
version = { attr = "configme.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
configme = [
    "data/*.toml",
    "data/packages/*.toml",
    "data/orchestrators/*.toml",
    "data/machines/*.mk",
    "data/compilers/*.mk",
    "data/overlays/*/common.mk",
]
